--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,3 +31,11 @@ body {
     text-wrap: balance;
   }
 }
+
+.font-dm-sans {
+  font-family: var(--font-dm-sans);
+}
+
+.font-albert-sans {
+  font-family: var(--font-albert-sans);
+}
